--- a/app.css
+++ b/app.css
@@ -2909,6 +2909,10 @@ max-width:100%
   top: 0.5em;
 }
 
+.container.is--onama {
+  padding-top: 10em;
+}
+
 /* 
       .parax {
         max-width: 42ch;
