--- a/app.css
+++ b/app.css
@@ -2889,7 +2889,7 @@ max-width:100%
   .paragraph p {
      max-width: 39ch;
 }
-.kontakt-big-logo, .tisucuwrap {
+.kontakt-big-logo, .tisucuwrap, .gi--num--wrap, .gi--big1  {
   font-size: 1vw;
 }
 
