--- a/app.css
+++ b/app.css
@@ -598,7 +598,7 @@ MAPBOX
 }
 
 .marker {
-  background-image: url('https://frkaplus.local/wp-content/uploads/2022/10/marker-fat.svgx');
+  background-image: url('https://frkaplus.local/wp-content/uploads/2022/10/marker-fat.svg');
   background-size: cover;
   width: 1.6em;
   height: 2.4em;
